--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,56 +1,77 @@
 <div class="container">
-	<div class="row">
-		<div class="col-xs-12 text-center" id="top-bar">
-			<img src="/static/assets/img/cuteBurger.jpg" alt="burger" class="burgerImg" />
-			<h1> Eat-Da-Burger! </h1>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-6 text-center" class="task">
-			<div class="row">
-			  {{#each burger_data}}
-			  	{{#unless this.devoured}}
-				<div class="col-xs-9 text-center">
-					<pre>
-					{{this.id}}. {{this.burger_name}}
-					</pre>
-				  		<!-- {{this.Date}} -->
-				</div>
-				<div class="col-xs-3 text-center">
-					<form method="POST" action="/burgers/update?_method=PUT" class="button-size">
-						<input input type="hidden" type="text" name="burger_id" value={{this.id}}><br>
-						<button type="submit" class="btn btn-default">Devour it!</button>
-					</form>
-				</div>
-				{{/unless}}
-			  {{/each}}
-			</div>
-		</div>
-		<div class="col-xs-6 text-center" class="task">
-			  {{#each burger_data}}
-			  	{{#if this.devoured}}
-			  		<input class="form-control" type="text" placeholder="{{this.id}}. {{this.burger_name}}" readonly>
-				{{/if}}
-			  {{/each}}
-		</div>
-	</div>
-</div>
+  <!--Jumbotron-->
+  <div class="jumbotron text-center bg-primary text-white">
+    <h1 class="display-4" id="app-title">Eat This Burger <img src="public/assets/img/burgers.jpeg"></h1>
+    <p class="lead">Welcome. Will you eat this burger?</p>
+  </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-xs-12 text-center enter_section">
-			<form action="/burgers/create" method="POST">
-				<input type="text" class="form-control" name="burger_name" value="" id="enter_text">
-				<button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
-			</form>
-			<p>Enter a burger you want to eat Click the "Submit" button.</p>
-		</div>
-	</div>
-</div>
-<div class="container">
-	<p class="text-muted small mb-0">Copyright &copy; edna.tech 2016 -
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>
-            </p>
-</div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card border border-primary">
+        <div class="card-header bg-primary text-white">
+         May I take your order?
+        </div>
+        <!--Create/add burger form-->
+        <div class="card-body">
+          <form class="create-form">
+            <div class="form-group">
+              <label for="burger">Place order here:</label>
+              <input type="text" class="form-control" id="burgerToGo" placeholder="">
+            </div>
+            <button class="btn btn-primary" type="submit">Place order</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="row mt-4">
+    <div class="col-md-6 mt-4">
+      <div class="card border border-primary">
+        <div class="card-header bg-primary text-white">
+         Burgers
+        </div>
+        <!--Div to hold burgers that have not been devoured yet-->
+        <div class="card-body">
+              {{#each burgers}}
+                {{#unless devoured}}
+                  {{> burgers/burger-block devour=false}}
+                {{/unless}}
+              {{/each}}
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 mt-4">
+      <div class="card devoured-card">
+        <div class="card-header text-white" id="devoured-card-header">
+         Devoured burgers
+        </div>
+        <!--When a burger has been devoured, put burger here-->
+        <div class="card-body">
+          {{#each burgers}}
+              {{#if devoured}}
+                {{> burgers/burger-devoured devour=true}}
+              {{/if}}
+          {{/each}}
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--Footer-->
+  <div class="row mt-5">
+    <div class="col-md-12">
+      <div class="card footer">
+        <div class="card-body footer-body text-white">
+          <h5 class="card-title text-white">Gourmet Burgers Galore</h5>
+          <p class="card-text">May I Take Your Order?.</p>
+          <a href="https://github.com/Dheepa/1234" class="btn btn-primary mr-2" target="_blank">GitHub Repo</a>
+          <a href="https://www.linkedin.com/" class="btn btn-primary" target="_blank">LinkedIn</a>
+          <br>
+          <br>
+          <small>Background</small>
+        </div>
+      </div>
+    </div>
