--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,12 @@
 <div class="container">
   <!--Jumbotron-->
   <div class="jumbotron text-center bg-primary text-white">
-    <h1 class="display-4" id="app-title">Eat This Burger <img src="public/assets/img/burgers.jpeg"></h1>
+    <h1 class="display-4" id="app-title">Eat This Burger, S'il Vous Plait</h1>
+  
     <p class="lead">Welcome. Will you eat this burger?</p>
   </div>
 
+<img src="public/assets/img/burgers.jpeg"> 
   <div class="row">
     <div class="col-md-12">
       <div class="card border border-primary">
@@ -45,7 +47,7 @@
 
     <div class="col-md-6 mt-4">
       <div class="card devoured-card">
-        <div class="card-header text-white" id="devoured-card-header">
+        <div class="card-header text-red accent-4" id="devoured-card-header">
          Devoured burgers
         </div>
         <!--When a burger has been devoured, put burger here-->
@@ -64,14 +66,12 @@
   <div class="row mt-5">
     <div class="col-md-12">
       <div class="card footer">
-        <div class="card-body footer-body text-white">
-          <h5 class="card-title text-white">Gourmet Burgers Galore</h5>
-          <p class="card-text">May I Take Your Order?.</p>
-          <a href="https://github.com/Dheepa/1234" class="btn btn-primary mr-2" target="_blank">GitHub Repo</a>
-          <a href="https://www.linkedin.com/" class="btn btn-primary" target="_blank">LinkedIn</a>
+        <div class="card-body footer-body text-">
+          <h5 class="card-title text-red accent-4">Gourmet Burgers Galore</h5>
+          <p class="card-text">May I Take Your Order?</p>
           <br>
           <br>
-          <small>Background</small>
+          <small>Dheepa Sivakumaran</small>
         </div>
       </div>
     </div>
