--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-	<meta charset="UTF-8">
-	<title>Awesome Burger</title>
-	<!--Google Fonts link-->
-	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-	<!--Bootstrap css link-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<!--Bootswatch link-->
-	<link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css">
-	<!--JQuery link-->
-	<script src="https://code.jquery.com/jquery.js"></script>
-	<!--External Javascript-->
-	<script src="/assets/js/burgers.js"></script>
-	<!--External CSS-->
-	<link rel="stylesheet" href="public/assets/css/style.css" type="text/css" />
-	<!--Font Awesome icons-->
-  	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <title>Devour Burgers</title>
+    <!-- BOOTSTRAP - Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP - Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="/static/assets/css/style.css">
+    
 </head>
-	<body>
-		{{{ body }}}
-	</body>
+
+<body>
+    
+    <div class="page-header">
+        <h1 class="text-center">Please Order the Gourmet Burger You Desire, S'il Vous Plait!</h1>
+    </div>
+    <!-- Used as placeholder for content from index.handlebars. -->
+    {{{ body }}}
+    <footer>
+        <h6 class="text-center">Gourmet Burgers Deluxe</h6>
+    </footer>
+</body>
+
 </html>
